--- a/src/card.css
+++ b/src/card.css
@@ -77,6 +77,14 @@
   color: #788492;
 }
 
+.card-header button {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #788492;
+  background: none;
+  border: none;
+}
+
 .card-content {
   padding: 25px 30px; /* Un poco más de espaciado interno */
   color: #4a4a4a;      /* Un gris oscuro, más suave que el negro puro */
@@ -113,6 +121,19 @@
 
 .card-content a:hover {
   border-bottom: 2px solid #007bff;
+}
+
+.card-content button{
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 15px 25px;
+  font-size: 16px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  z-index: 1000; 
+  transition: transform 0.2s ease-out, background-color 0.2s ease;
 }
 
 /* Animación para que el contenido aparezca suavemente */
